# The-Tetris-C-Port-Project

./: .gitignore  Makefile  README.md  meson.build
Linux_Build/: Tetris
Source_Files/: Main.cpp  SRS_File.cpp  meson.build
Source_Files/File/: File.cpp  File.hpp
Source_Files/Image/: Image.cpp  Image.hpp
Source_Files/KeyHandlers/: KeyHandlers.cpp  KeyHandlers.hpp
Source_Files/Mino/: Mino.cpp  Mino.hpp
Source_Files/World/: SRS_File.cpp  World.cpp  World.hpp
res/Data/: Temp.txt
